<resources>
    <string name="app_name">Goal calendar</string>
    <string name="action_settings">Settings</string>
    <string name="context_menu_edit_item">Edit</string>
    <string name="context_menu_delete_item">Delete</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_less">Less</string>
    <string name="button_more">More</string>
    <string name="onboarding_page_1_title">DECIDE WHAT IS IMPORTANT</string>
    <string name="onboarding_page_1_description">Set priorities and goals to work on</string>
    <string name="onboarding_page_2_title">SET UP PLANS</string>
    <string name="onboarding_page_2_description">Plan, how often you want to fulfill your tasks</string>
    <string name="onboarding_page_3_title">CONTROL YOUR PROGRESS</string>
    <string name="onboarding_page_3_description">Mark and watch tasks you do</string>
    <string name="add_category_dialog_header">Add category</string>
    <string name="edit_category_dialog_header">Edit category</string>
    <string name="confirm_delete_category_dialog_header">Delete category?</string>
    <string name="monthly_goals_category_dialog_times_textview_text">time(s) a</string>
    <string name="monthly_goals_category_dialog_times_confirm_button_text">Confirm</string>
    <string name="monthly_goals_category_dialog_times_cancel_button_text">Cancel</string>
    <string name="monthly_goals_category_dialog_name_label_text">Name</string>
    <string name="confirm_category_deleted_toast">Deleted category</string>
    <string name="monthlyPlans_monthSelected_toast_message" formatted="false">Showing %s %d</string>
    <string name="monthly_goals_category_dialog_Validation_name_edittext_error_empty">
        Category name is required
    </string>
    <string name="monthly_goals_category_dialog_Validation_name_edittext_error_tooLong">
        Maximum 40 characters
    </string>
    <string name="monthly_goals_category_frequencyFormat_textView" formatted="false">%d x %s</string>
    <string name="frequency_period_month">Month</string>
    <string name="frequency_period_week">Week</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string-array name="months_array">
        <item name="month_january_item">January</item>
        <item name="month_february_item">February</item>
        <item name="month_march_item">March</item>
        <item name="month_april_item">April</item>
        <item name="month_may_item">May</item>
        <item name="month_june_item">June</item>
        <item name="month_july_item">July</item>
        <item name="month_august_item">August</item>
        <item name="month_september_item">September</item>
        <item name="month_october_item">October</item>
        <item name="month_november_item">November</item>
        <item name="month_december_item">December</item>
    </string-array>
    <string name="monthly_plans_empty_view_copyLastUsedCategories_button_text">Copy categories</string>
    <string name="monthly_plans_empty_view_header_text">No categories</string>
    <string name="monthly_plans_empty_view_content_text">Add new category using \'+\' button or copy categories from last used month</string>
    <string name="monthly_plans_empty_view_simplyAdd_content_text">Add new category using \'+\' button</string>
    <string name="monthly_plans_empty_view_categories_copied_toast_text">Categories copied successfully</string>
    <string name="monthly_plans_summary_generalPercentage">Monthly progress: %.2f%%</string>
    <string name="monthly_plans_summary_details">Description of the summary of progress in this month</string>
    <string name="plans_summary_percentageFormat" formatted="false">%s%.2f%%</string>
    <string name="monthly_plans_summary_noOfDaysLeft">Days left: %d</string>
    <string name="monthly_plans_summary_generalPieChart_simple_sliceLabel" formatted="false">%s, %d/%d</string>
    <string name="monthly_plans_summary_selectedCategory_done_tasks" formatted="false">● %d of %d done</string>
    <string name="monthly_plans_summary_selectedCategory_failed_tasks" formatted="false">● %d failed</string>
    <string name="monthly_plans_summary_selectedCategory_planned_tasks" formatted="false">● %d planned</string>
    <string name="monthly_plans_summary_category_description_progressMonth_eq_progressCategory_neq_zero">Everything goes as planned. Well done.</string>
    <string name="monthly_plans_summary_category_description_progressMonth_eq_progressCategory_eq_zero">New month just began, start making a use of it.</string>
    <string name="monthly_plans_summary_category_description_progressMonth_eq_progressCategory_eq_zero_planned_gt_zero">Good you have planned some activities in this category, just do not forget to fulfill them.</string>
    <string name="monthly_plans_summary_category_description_progressMonth_lt_progressCategory_eq_zero">Jump start. Great, keep up the good work.</string>
    <string name="monthly_plans_summary_category_description_progressMonth_gt_progressCategory_neq_zero">You are a little bit behind the plans. Try use some spare time on this category.</string>
    <string name="monthly_plans_summary_category_description_progressMonth_gt_progressCategory_eq_zero">Month started some time ago, but you have not done anything yet. Be sure to plan some tasks in this category for next few days.</string>
    <string name="monthly_plans_summary_category_description_progressMonth_gt_progressCategory_eq_zero_planned_gt_zero">Month started some time ago, you will soon need to start executing your plans in this category.</string>
    <string name="monthly_plans_summary_category_description_progressMonth_lt_progressCategory_neq_zero">You are ahead with your plans. Great, keep up the good work, but do not forget about other categories.</string>
    <string name="monthly_plans_summary_category_description_progressCategory_doneBeforeEndOfMonth">You have already finished, what you planned in this category. It might be good time to focus on other ones.</string>
    <string name="monthly_plans_summary_category_description_progressCategory_done">Great, everything was done as planned.</string>
    <string name="monthly_plans_summary_category_description_progressCategory_overDone">You have finished more that planned. Maybe for next month you could increase the frequency in this category.</string>
    <string name="monthly_plans_summary_category_description_progressCategory_overDoneBeforeEndOfMonth">You are doing more than planned, great. Just be sure not to neglect other categories.</string>
    <string name="monthly_plans_summary_category_description_progressCategory_notDone">Not everything planned was done. Check if you have not spent more time on other categories, or if and why your plans failed in this one.</string>
    <string name="monthly_plans_summary_category_description_progressCategory_notDone_planned_gt_zero">You have last chance to fulfill your plans in this category before end of month.</string>
    <string name="monthly_plans_summary_category_description_progressCategory_notDoneBeforeEndOfMonth">Still some work to do here. There are couple of days left, so maybe focus on this category to keep up with plans.</string>
    <string name="monthly_plans_summary_category_description_monthNotStartedYet">Month not started yet</string>
    <string name="monthly_plans_summary_category_description_monthNotStartedYet_somethingDone">Month did not start yet. Have you maybe checked some fields by mistake?</string>
    <string name="monthly_plans_summary_progressMonth_noCategories_title">No categories</string>
    <string name="monthly_plans_summary_progressMonth_noCategories_description">Define categories for this month</string>
    <string name="monthly_plans_summary_progressMonth_monthJustStarted_title">New month started</string>
    <string name="monthly_plans_summary_progressMonth_monthJustStarted_description">Plan your activities</string>
    <string name="monthly_plans_summary_progressMonth_nothingDone_title">Nothing done yet</string>
    <string name="monthly_plans_summary_progressMonth_nothingDone_description">Start realising your plans</string>
    <string name="monthly_plans_summary_progressMonth_oneCategoryNotStarted_description" formatted="false">Try to do something in category %s today</string>
    <string name="monthly_plans_summary_progressMonth_oneCategoryNotStarted_title">Category not started yet</string>
    <string name="monthly_plans_summary_progressMonth_someCategoriesNotStarted_notPlanned_title">Categories not planned yet</string>
    <string name="monthly_plans_summary_progressMonth_2To4CategoriesNotStarted_notPlanned_description">You still have %d categories without any progress nor plans to handle</string>
    <string name="monthly_plans_summary_progressMonth_5AndMoreCategoriesNotStarted_notPlanned_description">You still have %d categories without any progress nor plans to handle</string>
    <string name="monthly_plans_summary_progressMonth_someCategoriesNotStarted_title">Do not forget those categories</string>
    <string name="monthly_plans_summary_progressMonth_2To4CategoriesNotStarted_description">You still have %d categories to progress in this month</string>
    <string name="monthly_plans_summary_progressMonth_5AndMoreCategoriesNotStarted_description">You still have %d categories to progress in this month</string>
    <string name="monthly_plans_summary_progressMonth_progressSlower_title">You are little behind with plans</string>
    <string name="monthly_plans_summary_progressMonth_progressSlower_description">Maybe you can do something more this next days</string>
    <string name="monthly_plans_summary_progressMonth_progressRegular_title">Everything goes as planned</string>
    <string name="monthly_plans_summary_progressMonth_progressRegular_description">Check what can you do next days</string>
    <string name="monthly_plans_summary_progressMonth_progressFaster_title">You are ahead in plans, keep on the good work</string>
    <string name="monthly_plans_summary_progressMonth_progressFaster_description">You are progressing faster than planned</string>
    <string name="notification_snackbar_okAction">OK</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_showStartupNotifications">Start of day notification</string>
    <string name="pref_title_plansProgressNotification">Plans progress notification</string>
    <string name="pref_title_showEODNotification">End of day summary notification</string>
    <string name="pref_title_markPlannedAsFailed_desctiption_checkbox">Planned, not completed tasks will be automatically marked as failed next day</string>
    <string name="pref_title_markPlannedAsFailed_switch">Automatically mark tasks</string>
    <string name="edit_dailyPlans_dialog_description_editText_hint">Description</string>
    <string name="edit_dailyPlans_dialog_description_header" formatted="false">%1$s, %2$tEEE, %2$tb %2$te %2$Y</string>
    <string name="monthly_goals_dailyPlans_dialog_cancel_button_text">Cancel</string>
    <string name="monthly_goals_dailyPlans_dialog_confirm_button_text">Confirm</string>
    <string name="action_backups">Backups</string>
    <string name="backup_progress_overlay_message">Saving backup</string>
    <string name="backup_doLogin_button_text">Login, to see online backup info</string>
</resources>