<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">
    <!-- dialog header -->
        <TextView
            android:id="@+id/monthly_goals_category_dialog_header_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/dialog_header_text_size"
            android:text="@string/add_category_dialog_header"/>
    <!-- edit/add category form -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_goals_category_dialog_name_label_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/monthly_goals_category_dialog_name_edittext"/>
    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <NumberPicker
            android:id="@+id/monthly_goals_category_dialog_frequency_numberpicker"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></NumberPicker>
        <TextView
            android:text="@string/monthly_goals_category_dialog_times_textview_text"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/monthly_goals_category_dialog_period_spinner"
            android:minWidth="150dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/monthly_goals_category_dialog_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_goals_category_dialog_times_confirm_button_text"/>

        <Button
            android:id="@+id/monthly_goals_category_dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_goals_category_dialog_times_cancel_button_text"/>
    </LinearLayout>
</LinearLayout>