<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/monthly_goals_emptyListView"
        android:layout_width="@dimen/monthly_goals_empty_view_layout_width"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/monthly_goals_empty_view_header_textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/monthly_plans_empty_view_header_text"/>
    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/monthly_goals_empty_view_content_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_plans_empty_view_content_text"/>
    <Button
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/planning_button_state_empty"
        android:textColor="@color/planningStateButton_stateEmpty_foregroundColor"
        android:gravity="center"
        android:id="@+id/monthly_plans_empty_view_copyLastUsedCategories_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_plans_empty_view_copyLastUsedCategories_button_text">

    </Button>
</LinearLayout>