<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.slamcode.goalcalendar.viewmodels.BackupViewModel"/>
        <variable
            name="presenter"
            type="com.slamcode.goalcalendar.view.presenters.BackupPresenter"/>
    </data>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backup_activity_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BackupActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ActionBarThemeOverlay"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            style="@style/ToolbarSolidStyle"
            app:title="@string/action_backups"/>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/appbar">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                bind:backupSourcesSource='@{vm.backupSources}'/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/backup_doLogin_button"
                    android:text="@string/backup_doLogin_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{(view) -> presenter.doSignIn()}'/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_listItemHeaderBackgroundColor"
            android:alpha="0.7"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility='@{vm.processingList ? View.VISIBLE : View.GONE}'>
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/backup_progress_overlay_message"/>
        </LinearLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>
</layout>